# zsh-llm-suggestions

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  RELEASING.md  SECURITY_AUDIT.md  pyproject.toml  run-tests.sh  test-environment.sh  test-simple.sh  zsh-llm-suggestions-demo.zsh  zsh-llm-suggestions-openai.py  zsh-llm-suggestions.zsh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  security_report.md
.github/workflows/: auto-release.yml  ci.yml  manual-release.yml
demo/: git-commits-explain
src/zsh_llm_suggestions/: __init__.py  base.py  copilot_backend.py  installer.py  openai_backend.py
src/zsh_llm_suggestions/backends/: __init__.py  copilot.py  openai.py
src/zsh_llm_suggestions/data/: zsh-llm-suggestions.zsh
tests/: __init__.py  conftest.py  test_installer.py  test_openai_integration.py  test_openai_unit.py
